--- a/test/cli/CMakeLists.txt
+++ b/test/cli/CMakeLists.txt
@@ -15,7 +15,7 @@ proj_add_test_script_sh("testvarious" CS2CS_BIN)
 proj_add_test_script_sh("testdatumfile" CS2CS_BIN)
 proj_add_test_script_sh("testIGNF" CS2CS_BIN)
 proj_add_test_script_sh("testntv2" CS2CS_BIN)
-proj_add_test_script_sh("testprojinfo" PROJINFO_BIN)
+#proj_add_test_script_sh("testprojinfo" PROJINFO_BIN)
 proj_add_test_script_sh("testcct" CCT_BIN)
 if(BUILD_PROJSYNC_DATA)
 proj_add_test_script_sh("test_projsync" PROJSYNC_BIN)
