Restore autoconf/autotools support

--- a/cmake/Makefile.am
+++ b/cmake/Makefile.am
@@ -12,5 +12,5 @@ EXTRA_DIST = CMakeLists.txt \
 			proj_config.cmake.in \
 			project-config-version.cmake.in \
 			project-config.cmake.in \
-			FindSqlite3.cmake
+			uninstall.cmake.in
 
