--- a/include/proj/Makefile.am
+++ b/include/proj/Makefile.am
@@ -5,4 +5,4 @@ SUBDIRS = internal
 projdir = $(includedir)/proj
 
 proj_HEADERS = util.hpp metadata.hpp common.hpp crs.hpp datum.hpp \
-	coordinatesystem.hpp coordinateoperation.hpp io.hpp nn.hpp
+	coordinates.hpp coordinatesystem.hpp coordinateoperation.hpp io.hpp nn.hpp
