--- a/test/cli/Makefile.am
+++ b/test/cli/Makefile.am
@@ -1,5 +1,5 @@
 # Executables paths passed to test scripts
-PROJ_LIB = ../../data/for_tests
+PROJ_DATA_VAR = ../../data/for_tests
 THIS_DIR = $(top_srcdir)/test/cli
 EXEPATH = ../../src
 PROJEXE = $(EXEPATH)/proj
@@ -32,42 +32,42 @@ EXTRA_DIST = pj_out27.dist pj_out83.dist td_out.dist \
 		testproj testproj_out.dist \
 		testinvproj testinvproj_out.dist \
 		test_projsync \
-		CMakeLists.txt
+		CMakeLists.txt input_with_utf8_bom.txt
 
 testprojinfo-check:
-	PROJ_SKIP_READ_USER_WRITABLE_DIRECTORY=YES PROJ_LIB=$(PROJ_LIB) $(TESTPROJINFO) $(PROJINFOEXE)
+	PROJ_SKIP_READ_USER_WRITABLE_DIRECTORY=YES PROJ_DATA=$(PROJ_DATA_VAR) $(TESTPROJINFO) $(PROJINFOEXE)
 
 test27-check:
-	PROJ_LIB=$(PROJ_LIB) $(TEST27) $(PROJEXE)
+	PROJ_DATA=$(PROJ_DATA_VAR) $(TEST27) $(PROJEXE)
 
 test83-check:
-	PROJ_LIB=$(PROJ_LIB) $(TEST83) $(PROJEXE)
+	PROJ_DATA=$(PROJ_DATA_VAR) $(TEST83) $(PROJEXE)
 
 testproj-check:
-	PROJ_LIB=$(PROJ_LIB) $(TESTPROJ) $(PROJEXE)
+	PROJ_DATA=$(PROJ_DATA_VAR) $(TESTPROJ) $(PROJEXE)
 
 testinvproj-check:
-	PROJ_LIB=$(PROJ_LIB) $(TESTINVPROJ) $(INVPROJEXE)
+	PROJ_DATA=$(PROJ_DATA_VAR) $(TESTINVPROJ) $(INVPROJEXE)
 
 testvarious-check:
-	PROJ_SKIP_READ_USER_WRITABLE_DIRECTORY=YES PROJ_LIB=$(PROJ_LIB) $(TESTVARIOUS) $(CS2CSEXE)
+	PROJ_SKIP_READ_USER_WRITABLE_DIRECTORY=YES PROJ_DATA=$(PROJ_DATA_VAR) $(TESTVARIOUS) $(CS2CSEXE)
 
 testdatumfile-check:
-	PROJ_SKIP_READ_USER_WRITABLE_DIRECTORY=YES PROJ_LIB=$(PROJ_LIB) $(TESTDATUMFILE) $(CS2CSEXE)
+	PROJ_SKIP_READ_USER_WRITABLE_DIRECTORY=YES PROJ_DATA=$(PROJ_DATA_VAR) $(TESTDATUMFILE) $(CS2CSEXE)
 
 testign-check:
-	PROJ_SKIP_READ_USER_WRITABLE_DIRECTORY=YES PROJ_LIB=$(PROJ_LIB) $(TESTIGN) $(CS2CSEXE)
+	PROJ_SKIP_READ_USER_WRITABLE_DIRECTORY=YES PROJ_DATA=$(PROJ_DATA_VAR) $(TESTIGN) $(CS2CSEXE)
 
 testntv2-check:
-	PROJ_SKIP_READ_USER_WRITABLE_DIRECTORY=YES PROJ_LIB=$(PROJ_LIB) $(TESTNTV2) $(CS2CSEXE)
+	PROJ_SKIP_READ_USER_WRITABLE_DIRECTORY=YES PROJ_DATA=$(PROJ_DATA_VAR) $(TESTNTV2) $(CS2CSEXE)
 
 testcct-check:
-	PROJ_SKIP_READ_USER_WRITABLE_DIRECTORY=YES PROJ_LIB=$(PROJ_LIB) $(TESTCCT) $(CCTEXE)
+	PROJ_SKIP_READ_USER_WRITABLE_DIRECTORY=YES PROJ_DATA=$(PROJ_DATA_VAR) $(TESTCCT) $(CCTEXE)
 
 
 if HAVE_CURL
 testprojsync-check:
-	PROJ_LIB=$(PROJ_LIB) $(TESTPROJSYNC) $(PROJSYNC_EXE)
+	PROJ_DATA=$(PROJ_DATA_VAR) $(TESTPROJSYNC) $(PROJSYNC_EXE)
 else
 testprojsync-check:
 	echo "Skipping testprojsync-check"
