--- a/test/gie/Makefile.am
+++ b/test/gie/Makefile.am
@@ -18,7 +18,8 @@ EXTRA_DIST = 4D-API_cs2cs-style.gie \
 	peirce_q.gie \
 	defmodel.gie \
 	tinshift.gie \
-	nkg.gie
+	nkg.gie \
+	gridshift.gie
 
 PROJ_LIB ?= ../../data/for_tests
 
@@ -71,6 +72,9 @@ defmodel: defmodel.gie
 	PROJ_SKIP_READ_USER_WRITABLE_DIRECTORY=YES PROJ_LIB=$(PROJ_LIB) $(GIEEXE) $<
 
 tinshift: tinshift.gie
+	PROJ_SKIP_READ_USER_WRITABLE_DIRECTORY=YES PROJ_LIB=$(PROJ_LIB) $(GIEEXE) $<
+
+gridshift: gridshift.gie
 	PROJ_SKIP_READ_USER_WRITABLE_DIRECTORY=YES PROJ_LIB=$(PROJ_LIB) $(GIEEXE) $<
 
 check-local: 4D-API-cs2cs-style GDA axisswap builtins deformation ellipsoid more_builtins unitconvert DHDN_ETRS89 geotiff_grids adams_hemi adams_ws1 adams_ws2 guyou peirce_q defmodel tinshift
