--- a/test/gigs/Makefile.am
+++ b/test/gigs/Makefile.am
@@ -7,6 +7,7 @@ EXTRA_DIST = \
 	5101.3-jhs.gie \
 	5101.4-jhs-etmerc.gie \
 	5102.1.gie \
+	5102.2.gie \
 	5103.1.gie \
 	5103.2.gie \
 	5103.3.gie \
@@ -14,6 +15,7 @@ EXTRA_DIST = \
 	5105.2.gie \
 	5106.gie \
 	5107.gie \
+	5108.gie \
 	5109.gie \
 	5111.1.gie \
 	5112.gie \
@@ -38,6 +40,9 @@ PROJ_LIB ?= ../../data/for_tests
 5102.1: 5102.1.gie
 	PROJ_SKIP_READ_USER_WRITABLE_DIRECTORY=YES PROJ_LIB=$(PROJ_LIB) $(GIEEXE) $<
 
+5102.2: 5102.2.gie
+	PROJ_SKIP_READ_USER_WRITABLE_DIRECTORY=YES PROJ_LIB=$(PROJ_LIB) $(GIEEXE) $<
+
 5103.1: 5103.1.gie
 	PROJ_SKIP_READ_USER_WRITABLE_DIRECTORY=YES PROJ_LIB=$(PROJ_LIB) $(GIEEXE) $<
 
@@ -57,6 +62,9 @@ PROJ_LIB ?= ../../data/for_tests
 	PROJ_SKIP_READ_USER_WRITABLE_DIRECTORY=YES PROJ_LIB=$(PROJ_LIB) $(GIEEXE) $<
 
 5107: 5107.gie
+	PROJ_SKIP_READ_USER_WRITABLE_DIRECTORY=YES PROJ_LIB=$(PROJ_LIB) $(GIEEXE) $<
+
+5108: 5108.gie
 	PROJ_SKIP_READ_USER_WRITABLE_DIRECTORY=YES PROJ_LIB=$(PROJ_LIB) $(GIEEXE) $<
 
 5109: 5109.gie
